--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,38 +1,137 @@
-only_rules:
-  - colon
+disabled_rules: # rule identifiers to exclude from running
+  - identifier_name
+  - todo
+  - line_length
+  - function_parameter_count
+  - private_over_fileprivate
+  - multiple_closures_with_trailing_closure
+  - block_based_kvo
+  - legacy_hashing
+  - unused_setter_value
+  - vertical_parameter_alignment
+  - orphaned_doc_comment
+  - trailing_comma
+  - opening_brace
+  - valid_ibinspectable
+  - nimble_operator
+
+opt_in_rules:
+  - unused_declaration
+  - unused_import
+  - force_unwrapping
+  - empty_count
+  - explicit_init
+  - nimble_operator
+  - overridden_super_call
+  - private_outlet
+  - redundant_nil_coalescing
+  - file_header
+  - prohibited_super_call
   - fatal_error_message
-  - implicitly_unwrapped_optional
-  - legacy_cggeometry_functions
-  - legacy_constant
-  - legacy_constructor
-  - legacy_nsgeometry_functions
-  - operator_usage_whitespace
-  - return_arrow_whitespace
-  - trailing_newline
-  - unused_optional_binding
-  - vertical_whitespace
-  - void_return
-  - custom_rules
+  - implicit_return
+  - prefer_self_type_over_type_of_self
+  - conditional_returns_on_newline
+  - self_binding
 
 excluded:
+  - Tuist/Dependencies
   - Carthage
   - Pods
+  - "Generated"
+  - "*/Generated"
+  - "*/*/Generated"
+  - "*/*/*/Generated"
+  - "*/*/*/*/Generated"
+  - ".build"
+  - "*/.build"
+  - "*/*/.build"
+  - "*/*/*/.build"
+  - "*/*/*/*/.build"
+  - "*/R.generated.swift"
+  - "*/*/R.generated.swift"
+  - "*/*/*/R.generated.swift"
+  - "*/*/*/*/R.generated.swift"
+  - "*Tests/"
+  - "*/*Tests/"
+  - "*/*/*Tests/"
+  - "*/*/*/*Tests/"
+  - "*/*/*/*/*Tests/"
+  - "Tests/"
+  - "*/Tests/"
+  - "*/*/Tests/"
+  - "*/*/*/Tests/"
+  - "*/*/*/*/Tests/"
+  - "Example/"
+  - "*/Example/"
+  - "*/*/Example/"
+  - "*/*/*/Example/"
+  - "*/*/*/*/Example/"
+  - ".spm-sources"
+  - vendor
 
-colon:
-  apply_to_dictionaries: false
-
-indentation: 4
-
+# parameterized rules can be customized from this configuration file
+cyclomatic_complexity:
+  ignores_case_statements: true
+implicit_return:
+  included: [closure]
+switch_case_alignment:
+  indented_cases: true
+private_outlet:
+  allow_private_set: true
+file_length:
+  - 1000 # warning
+  - 9999 # error
+function_body_length:
+  - 100 # warning
+  - 9999 # error
+# parameterized rules are first parameterized as a warning level, then error level.
+trailing_whitespace:
+  ignores_empty_lines: false
+large_tuple:
+  - 4 # warning
+  - 5 # error
+type_body_length:
+  - 550 # warning
+  - 9999 # error
+type_name:
+  min_length: 2 # only warning
+  max_length: # warning and error
+    warning: 50
+    error: 60
+conditional_returns_on_newline:
+  if_only: true
 custom_rules:
-  no_objcMembers:
-    name: "@objcMembers"
-    regex: "@objcMembers"
-    message: "Explicitly use @objc on each member you want to expose to Objective-C"
-    severity: error
-  no_direct_standard_out_logs:
-    name: "Writing log messages directly to standard out is disallowed"
-    regex: "(\\bprint|\\bdebugPrint|\\bdump|Swift\\.print|Swift\\.debugPrint|Swift\\.dump)\\s*\\("
+  view_with_tag_usage:
+    name: "View With Tag usage"
+    regex: "(viewWithTag)"
     match_kinds:
       - identifier
-    message: "Don't commit `print(…)`, `debugPrint(…)`, or `dump(…)` as they write to standard out in release. Either log to a dedicated logging system or silence this warning in debug-only scenarios explicitly using `// swiftlint:disable:next no_direct_standard_out_logs`"
-    severity: warning
+    message: "A Kitten dies everytime you use viewWithTag, do not use viewWithTag"
+    severity: error
+  superview_superview_usage:
+    name: "superview.superview usage"
+    regex: '(superview\?.superview)'
+    match_kinds:
+      - identifier
+    message: "Using superview?.superview is never a good idea, think of other options or ask for help"
+    severity: error
+  no_device_or_bundle_inits:
+    name: "No UIDevice or Bundle inits"
+    regex: '(UIDevice\(\)|Bundle\(\))'
+    match_kinds:
+      - identifier
+    message: "We should never call UIDevice() or Bundle(), use UIDevice.current or Bundle.main/Bundle(for:) instead"
+    severity: error
+  rx_driver_hides_error:
+    name: "Rx driver conversion hides error"
+    regex: 'asDriver\(onErrorJustReturn'
+    message: "Consider if what you are driving should ever fail. It's likely that you are hiding errors, and allowing for undefined application state. Use `asInfallibleDriver` instead."
+  rx_data_source_broken:
+    name: "RxCocoa Data Source Binding"
+    regex: 'rx\.items\(dataSource'
+    message: "This functionality is broken. Consider using updating the datasource directly and attaching it manually. See: https://github.com/ReactiveX/RxSwift/issues/2368"
+  swiftgen_strings:
+    name: "Direct reference to NSLocalizedString"
+    regex: "NSLocalizedString"
+    message: "Use L10n.key instead. If SwiftGen is not available in this module, use RStrings instead"
+    severity: error
