--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,26 +14,26 @@ jobs:
       - run: bundle install
       - run:
           name: Fastlane
-          command: bundle exec fastlane beta
+          command: bundle exec fastlane unit_test
       - store_artifacts:
           path: output
       - store_test_results:
           path: output/scan
 
-  adhoc:
-    macos:
-      xcode: 14.2.0
-    environment:
-      FL_OUTPUT_DIR: output
-      FASTLANE_LANE: adhoc
-    steps:
-      - checkout
-      - run: bundle install
-      - run:
-          name: Fastlane
-          command: bundle exec fastlane $FASTLANE_LANE
-      - store_artifacts:
-          path: output
+  # adhoc:
+  #   macos:
+  #     xcode: 14.2.0
+  #   environment:
+  #     FL_OUTPUT_DIR: output
+  #     FASTLANE_LANE: adhoc
+  #   steps:
+  #     - checkout
+  #     - run: bundle install
+  #     - run:
+  #         name: Fastlane
+  #         command: bundle exec fastlane $FASTLANE_LANE
+  #     - store_artifacts:
+  #         path: output
 
 workflows:
   build-test-adhoc:
