--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,9 +39,9 @@ workflows:
   build-test-adhoc:
     jobs:
       - build-and-test
-      - adhoc:
-          filters:
-            branches:
-              only: development
-          requires:
-            - build-and-test
+      # - adhoc:
+      #     filters:
+      #       branches:
+      #         only: development
+      #     requires:
+      #       - build-and-test
