updated lane that sends build to test flight

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,6 @@ iOSInjectionProject/
 
 ### Xcode Patch ###
 **/xcshareddata/WorkspaceSettings.xcsettings
+
+## Credentials
+**/app-store-connect-key.json
