--- a/fastlane/.env.ios
+++ b/fastlane/.env.ios
@@ -1,1 +1,15 @@
 MATCH_PLATFORM=ios
+
+GYM_OUTPUT_DIRECTORY=build/ios
+GYM_CONFIGURATION=Release
+GYM_SCHEME=useful
+GYM_EXPORT_METHOD=app-store
+
+# Parameters for submitting a build to TestFlight
+
+PILOT_SKIP_SUBMISSION=true
+PILOT_BUILD_NUMBER=1
+PILOT_APP_VERSION=0.1.0
+PILOT_IPA=build/ios/Useful.ipa
+PILOT_TEAM_NAME=Mykhailo Herasimov
+PILOT_APP_IDENTIFIER=com.untitled.useful
