--- a/fastlane/.env.ios
+++ b/fastlane/.env.ios
@@ -8,8 +8,14 @@ GYM_EXPORT_METHOD=app-store
 # Parameters for submitting a build to TestFlight
 
 PILOT_SKIP_SUBMISSION=true
-PILOT_BUILD_NUMBER=1
-PILOT_APP_VERSION=0.1.0
+# PILOT_BUILD_NUMBER=1
+# PILOT_APP_VERSION=0.1.0
 PILOT_IPA=build/ios/Useful.ipa
 PILOT_TEAM_NAME=Mykhailo Herasimov
 PILOT_APP_IDENTIFIER=com.untitled.useful
+
+# Parameters for unit testing the app
+
+SCAN_DEVICE='iPhone 8'
+SCAN_SCHEME=useful
+SCAN_PROJECT=useful.xcodeproj
