--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,43 @@
 # .circleci/config.yml
+
 version: 2.1
+
 orbs:
   macos: circleci/macos@2.3.4
-jobs:
-  build-and-test:
+
+executors:
+  ios:
     macos:
       xcode: 14.2.0
+    working_directory: /Users/distiller/project
+    shell: /bin/bash --login -o pipefail
     environment:
       FL_OUTPUT_DIR: output
-      FASTLANE_LANE: test
+      LANG: en_US.UTF-8
+
+jobs:
+  run_lane:
+    description: "Run specifc lane using Fastlane"
+    executor: ios
+    parameters:
+      lane:
+        type: string
     steps:
       - checkout
-      - run: bundle install
       - run:
-          name: Fastlane
-          command: bundle exec fastlane unit_test
-      - store_artifacts:
-          path: output
+          name: "Run lane in Fastlane"
+          command: bundle exec fastlane ${{parameters.lane}}
+
+  unit_test:
+    steps:
+      - macos/preboot-simulator:
+          version: "16.0"
+          platform: iOS
+          device: "iPhone 8"
+      - run_lane:
+          lane: unit_test
+      # - store_artifacts:
+      #     path: output
       - store_test_results:
           path: output/scan
 
@@ -36,9 +57,9 @@ jobs:
   #         path: output
 
 workflows:
-  build-test-adhoc:
+  run_unit_tests:
     jobs:
-      - build-and-test
+      - unit_test
       # - adhoc:
       #     filters:
       #       branches:
