updated config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
           command: bundle exec fastlane ${{parameters.lane}}
 
   unit_test:
+    executor: ios
     steps:
       - macos/preboot-simulator:
           version: "16.0"
@@ -40,21 +41,6 @@ jobs:
       #     path: output
       - store_test_results:
           path: output/scan
-
-  # adhoc:
-  #   macos:
-  #     xcode: 14.2.0
-  #   environment:
-  #     FL_OUTPUT_DIR: output
-  #     FASTLANE_LANE: adhoc
-  #   steps:
-  #     - checkout
-  #     - run: bundle install
-  #     - run:
-  #         name: Fastlane
-  #         command: bundle exec fastlane $FASTLANE_LANE
-  #     - store_artifacts:
-  #         path: output
 
 workflows:
   run_unit_tests:
