--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,10 @@ jobs:
   unit_test:
     executor: ios
     steps:
-      - macos/preboot-simulator:
-          version: "16.0"
-          platform: "iOS"
-          device: "iPhone 14"
+      # - macos/preboot-simulator:
+      #     version: "16.0"
+      #     platform: "iOS"
+      #     device: "iPhone 14"
       - run_lane:
           lane: unit_test
       # - store_artifacts:
