--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,11 +18,15 @@ executors:
 jobs:
   unit_test:
     executor: ios
+    environment:
+      IOS_DEVICE: iPhone 14
+      IOS_VERSION: 16.2
     steps:
-      - macos/preboot-simulator:
-          version: "14.5"
-          platform: "iOS"
-          device: "iPhone 12"
+      - run:
+          name: Pre-boot iOS Simulator
+          command: |
+            UDID=$(xcrun xctrace list devices 2>&1 | grep '$IOS_DEVICE Simulator ($IOS_VERSION) (' | awk -F'[()]' '{print $4}')
+            xcrun simctl boot "$UDID"
       - run_lane:
           lane: unit_test
       # - store_artifacts:
