updated ruby version to 3.0.5

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,6 @@
 
 version: 2.1
 
-orbs:
-  macos: circleci/macos@2.3.4
-
 executors:
   ios:
     macos:
@@ -25,17 +22,17 @@ jobs:
       - run:
           name: "Ruby version"
           command: ruby -v
-      # - run:
-      #     name: Pre-boot iOS Simulator
-      #     command: |
-      #       UDID=$(xcrun xctrace list devices 2>&1 | grep "$IOS_DEVICE Simulator ($IOS_VERSION) (" | awk -F'[()]' '{print $4}')
-      #       xcrun simctl boot "$UDID"
-      # - run_lane:
-      #     lane: unit_test
-      # # - store_artifacts:
-      # #     path: output
-      # - store_test_results:
-      #     path: output/scan
+      - run:
+          name: Pre-boot iOS Simulator
+          command: |
+            UDID=$(xcrun xctrace list devices 2>&1 | grep "$IOS_DEVICE Simulator ($IOS_VERSION) (" | awk -F'[()]' '{print $4}')
+            xcrun simctl boot "$UDID"
+      - run_lane:
+          lane: unit_test
+      # - store_artifacts:
+      #     path: output
+      - store_test_results:
+          path: output/scan
 
 commands:
   run_lane:
@@ -45,8 +42,6 @@ commands:
         type: string
     steps:
       - checkout
-      - macos/switch-ruby:
-          version: 2.7.2
       - run:
           name: Install gems
           command: bundle check || bundle install --path vendor/bundle
