--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,11 +26,11 @@ jobs:
             xcrun simctl boot "$UDID"
       - run_lane:
           lane: unit_test
-      - store_artifacts:
-          path: output/report.junit
-          destination: test_report.junit
-      - store_test_results:
-          path: output/report.html
+      # - store_artifacts:
+      #     path: output/report.junit
+      #     destination: test_report.junit
+      # - store_test_results:
+      #     path: output/report.html
 
 commands:
   run_lane:
@@ -44,7 +44,7 @@ commands:
           name: Install gems
           command: bundle check || bundle install --path vendor/bundle
       - run:
-          name: "Run ${LANE} lane in Fastlane"
+          name: "Run ${lane} lane in Fastlane"
           command: bundle exec fastlane << parameters.lane >>
 
 workflows:
