--- a/fastlane/.env.ios
+++ b/fastlane/.env.ios
@@ -16,6 +16,6 @@ PILOT_APP_IDENTIFIER=com.untitled.useful
 
 # Parameters for unit testing the app
 
-SCAN_DEVICE='iPhone 8'
 SCAN_SCHEME=useful
 SCAN_PROJECT=useful.xcodeproj
+SCAN_OUTPUT_DIRECTORY=output
