Integrated Circle CI and Fastlane into the project (#3)
* Integrated Fastlane and Circle CI

--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,8 @@ playground.xcworkspace
 # Package.pins
 # Package.resolved
 .build/
-# Add this line if you want to avoid checking in Xcode SPM integration.
-# .swiftpm/xcode
+.swiftpm/xcode
+packages/*/.swiftpm/xcode
 
 # CocoaPods
 # We recommend against adding the Pods directory to your .gitignore. However
@@ -97,3 +97,6 @@ iOSInjectionProject/
 ### Xcode Patch ###
 **/xcshareddata/WorkspaceSettings.xcsettings
 
+## Credentials
+**/app-store-connect-key.json
+*.secret
