--- a/useful/configs/useful-Shared.xcconfig
+++ b/useful/configs/useful-Shared.xcconfig
@@ -34,6 +34,15 @@ CURRENT_PROJECT_VERSION = 2
 
 
 
+// Marketing Version
+//
+// This setting defines the user-visible version of the project. The value corresponds to
+// the `CFBundleShortVersionString` key in your app's Info.plist.
+
+MARKETING_VERSION = 0.1.0
+
+
+
 // Development Team
 // 
 // The team ID of a development team to use for signing certificates and provisioning
@@ -83,15 +92,6 @@ INFOPLIST_KEY_LSApplicationCategoryType = public.app-category.lifestyle
 // Topics](https://developer.apple.com/library/content/documentation/DeveloperTools/Conceptual/DynamicLibraries/000-Introduction/Introduction.html).
 
 LD_RUNPATH_SEARCH_PATHS = $(inherited) @executable_path/Frameworks
-
-
-
-// Marketing Version
-// 
-// This setting defines the user-visible version of the project. The value corresponds to
-// the `CFBundleShortVersionString` key in your app's Info.plist.
-
-MARKETING_VERSION = $(MARKETING_VERSION)
 
 
 
