added env variables for particular environments

--- a/fastlane/.env.ios
+++ b/fastlane/.env.ios
@@ -1,10 +1,5 @@
 MATCH_PLATFORM=ios
 
-GYM_OUTPUT_DIRECTORY=build/ios
-GYM_CONFIGURATION=Release
-GYM_SCHEME=useful
-GYM_EXPORT_METHOD=app-store
-
 # Parameters for submitting a build to TestFlight
 
 PILOT_SKIP_SUBMISSION=true
@@ -17,3 +12,8 @@ PILOT_APP_IDENTIFIER=com.untitled.useful
 SCAN_SCHEME=useful
 SCAN_PROJECT=useful.xcodeproj
 SCAN_OUTPUT_DIRECTORY=output
+
+# Parameters for firebase distribution
+
+FIREBASEAPPDISTRO_IPA_PATH=output/gym/Useful.ipa
+GOOGLESERVICE_INFO_PLIST_PATH=useful/GoogleService-Info.plist
