reconfigured fastlane to run the firebase distribution

--- a/fastlane/.env
+++ b/fastlane/.env
@@ -1,6 +1,7 @@
 FASTLANE_USER=mogerasimov@gmail.com
 FASTLANE_TEAM_NAME=Mykhailo Herasimov
 FASTLANE_ITC_TEAM_NAME=Mykhailo Herasimov
+FASTLANE_XCODEBUILD_SETTINGS_TIMEOUT=120
 
 # Parameters for creating an app on the app store connect
 
