added google service to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -102,4 +102,8 @@ iOSInjectionProject/
 *.secret
 
 ## Services
-**/firebase.xcconfig
+useful/GoogleService-Info.plist
+
+
+### CirleCI ###
+output/
