--- a/fastlane/.env
+++ b/fastlane/.env
@@ -19,3 +19,4 @@ PRODUCE_LANGUAGE=en-US
 MATCH_USERNAME=mogerasimov@gmail.com
 MATCH_GIT_URL=git@github.com:mishaherasimov/untitled-apple-certificates.git
 MATCH_APP_IDENTIFIER=com.untitled.useful
+MATCH_FORCE_FOR_NEW_DEVICES=true
